# openpose

./: .gitignore  CMakeLists.txt  README.md  pose_cli.cpp
.github/workflows/: release.yml  test.yml
debian/DEBIAN/: control  postinst
includes/: openpose.hpp  parameter_handler.hpp  utils.hpp
release/: openpose-cli-1.0.0.deb
scripts/: download-models.sh
src/: main.cpp  openpose.cpp  parameter_handler.cpp
